syntax = "proto3";

package yandex.cloud.priv.disk_manager.v1;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/api;disk_manager";

// Should be binary compatible with cloud/tasks/errors.ErrorDetails.
message ErrorDetails {
    int64 code = 1;
    string message = 2;
    bool internal = 3;
}
