syntax = "proto2";

package nbs;

import "google/protobuf/duration.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/clients/nbs/config";

////////////////////////////////////////////////////////////////////////////////

message Zone {
    repeated string Endpoints = 1;
}

message ZoneShards {
    repeated string Shards = 1;
}

message GrpcKeepAliveConfig {
    optional string Time = 1 [default = "10s"];
    optional string Timeout = 2 [default = "1s"];
    optional bool PermitWithoutStream = 3 [default = true];
}

message ClientConfig {
    map<string, Zone> Zones = 1;
    optional string RootCertsFile = 2;
    optional bool Insecure = 3;
    optional bool DisableAuthentication = 4;
    required GrpcKeepAliveConfig GrpcKeepAlive = 5;
    optional string DurableClientTimeout = 6 [default = "20s"];
    optional string DiscoveryClientHardTimeout = 7 [default = "30s"];
    optional string DiscoveryClientSoftTimeout = 8 [default = "15s"];
    repeated string EnableThrottlingForMediaKinds = 9;
    optional bool UseGZIPCompression = 10;
    optional string SessionRediscoverPeriodMin = 11 [default = "4m"];
    optional string SessionRediscoverPeriodMax = 12 [default = "6m"];
    // ServerRequestTimeout is passed to server in headers and handled on the server side.
    optional string ServerRequestTimeout = 13 [default = "20s"];
    map<string, ZoneShards> Shards = 14;
}
