syntax = "proto2";

package client;

import "google/protobuf/duration.proto";
import "cloud/tasks/logging/config/config.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/configs/client/config";

////////////////////////////////////////////////////////////////////////////////

message ClientConfig {
    optional string Host = 1;
    optional uint32 Port = 2 [default = 9797];
    optional uint32 MaxRetryAttempts = 3 [default = 1000];
    optional string PerRetryTimeout = 4 [default = "5s"];
    optional string BackoffTimeout = 5 [default = "1s"];
    optional string OperationPollPeriod = 6 [default = "1s"];
    optional string ServerCertFile = 7;
    optional bool Insecure = 8;
    required logging.LoggingConfig LoggingConfig = 9;
}
