syntax = "proto2";

package pools;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/pools/config";

////////////////////////////////////////////////////////////////////////////////

message PoolsConfig {
    // Maximum number of slots in one base disk.
    optional uint32 MaxActiveSlots = 1 [default = 640];
    // Maximum number of base disks simultaneously creating from one image.
    optional uint32 MaxBaseDisksInflight = 2 [default = 5];
    optional uint32 MaxBaseDiskUnits = 3 [default = 640];
    optional uint32 TakeBaseDisksToScheduleParallelism = 4 [default = 20];
    optional string ScheduleBaseDisksTaskScheduleInterval = 5 [default = "1m"];
    optional string DeleteBaseDisksTaskScheduleInterval = 6 [default = "1m"];
    optional string StorageFolder = 7 [default = "pools"];
    optional string CloudId = 8 [default = "yc.disk-manager.cloud"];
    optional string FolderId = 9 [default = "yc.disk-manager.pools"];
    // Maximum number of base disks simultaneously deleting.
    optional uint32 DeleteBaseDisksLimit = 10 [default = 100];
    optional string DeletedBaseDiskExpirationTimeout = 11 [default = "30m"];
    optional string ClearDeletedBaseDisksTaskScheduleInterval = 12 [default = "1m"];
    optional uint32 ClearDeletedBaseDisksLimit = 13 [default = 1000];
    optional string ReleasedSlotExpirationTimeout = 14 [default = "30m"];
    optional string ClearReleasedSlotsTaskScheduleInterval = 15 [default = "1m"];
    optional uint32 ClearReleasedSlotsLimit = 16 [default = 1000];
    optional uint64 ConvertToImageSizedBaseDiskThreshold = 17 [default = 128];
    optional uint64 ConvertToDefaultSizedBaseDiskThreshold = 18 [default = 32];
    optional string OptimizeBaseDisksTaskScheduleInterval = 19 [default = "15m"];
    optional string MinOptimizedPoolAge = 20 [default = "24h"];
    optional bool RegularBaseDiskOptimizationEnabled = 21 [default = true];
    optional string BaseDiskIdPrefix = 22 [default = "base-"];
}
